# develop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  dockerfile  requirements.txt
.claude/skills/paper-translate/: 1_extract_text.py  2_extract_figures.py  3_generate_pdf.py  SKILL.md  crop_tool.html
doc/: README.md
doc/cute/: README.md  cute_代数原理.md
doc/deepseek/: DSpark_paper_zh.md
doc/deepseek/figures/: crop_tool.html
doc/doc/: cla.md  cla_chinese.md
doc/flashattention/: 3_generate_pdf_local.py  paper_zh.md
doc/paper/: flashattention.md
example/base/: model.py  onnx_run.py  tensorrt_demo.py  to_tenserrt.py
example/base/middle_files/: model.engine  srcnn.onnx
example/base/rt_inference/: CMakeLists.txt  rt_from_rt.cpp
example/code/: CMakeLists.txt  main.cpp
example/cutlass/: CMakeLists.txt  gemm-multi-stage.cu  gemm.cu  main.cu  print.h  vector_add.cuh
example/cutlass/detail/: data.h
example/gtest/: CMakeLists.txt  main.cu
example/leetcode/: CMakeLists.txt  three_sum.cpp  trap.cpp
example/other/: CMakeLists.txt  findAnagrams.cpp  lengthOfLongestSubstring.cpp  maxSlidingWindow.cpp  minWindow.cpp  subarraySum.cpp  trap.cpp
kernel/: CMakeLists.txt  soft_softmax.cu
kernel/attention/flash_attention/: flash_attention.cu  flash_attention.h  flash_attention.h.bak  softmax_reg.cuh
kernel/attention/standard_attention/: standard_attention.cu  standard_attention.h
kernel/device/: README.md  device.cu  device.cuh
kernel/flash_attention/: flash_attention.cuh
kernel/gemm/: gemm_multi_stage.cu  gemm_multi_stage.cuh  gemm_rs.cuh
kernel/reduce/: reduce.cu  reduce.cuh  reduce.h  reduce_with_divergent_warps.cu  test_reduce.cu
kernel/softmax/: safe_softmax.cu  soft_softmax.cu1  soft_softmax.h1  softmax.cpp  softmax.cu  softmax.cuh  softmax.h
kernel/test/: CMakeLists.txt  bench_attention.cu  bench_attention_torch.py  bench_softmax.cu  bench_standard_attention.cu  test_device.cu  test_flash_attention.cu  test_gemm_multi_stage.cu  test_reduce.cu  test_softmax.cpp  test_softmax_gpu.cu  test_softmax_reg_compile.cu  test_standard_attention.cu
scripts/: build.sh  cutlass_tex_pdf.sh  env.sh  nsys.sh  test.sh
tools/: test_llm.py
