cmake_minimum_required(VERSION 3.18)


project(develop)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Wall")  
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -Wall -Xcompiler -Wextra")
set(CMAKE_CUDA_FLAGS_DEBUG "-G -O0")
set(CMAKE_CUDA_FLAGS_RELEASE "-O2")
set(CUDA_ARCHITECTURES "61;70;75;80")  # 计算能力版本: 6.1, 7.0, 7.5, 8.0
set(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCHITECTURES})
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX $ENV{PROJECT_PATH}/install CACHE PATH "Install path prefix" FORCE)
endif()
add_subdirectory(kernel)





